# streamclusterer

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md
src/: CMakeLists.txt  hello.c
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  hello_benchmark.c
tests/unit/: CMakeLists.txt  hello_unit.c  test.h
tools/cmake/: FindCTargets.cmake  FindOptions.cmake
